# solcon

./: .gitignore  Cargo.toml  build.rs  disable aslr.sh  init.cmd  init.fish  init.ps1  init.sh  readme.txt  rust-toolchain.toml
instrumenter/: Cargo.toml  build.rs  rust-toolchain.toml
instrumenter/src/: config.rs  input_filter.rs  main.rs  mem_instrumenter.rs  mirpass.rs  utils.rs
instrumenter/src/macro_monitors_finder/src/: lib.rs
instrumenter/src/mirpass/: barrier_wait_handler.rs  condvar_wait_handler.rs  condvar_wait_timeout_ms_handler.rs  debug_use_inspect_func_call.rs  entry_fn_handler.rs  mutex_lock_handler.rs  mutex_try_lock_handler.rs  mutexguard_drop_handler.rs  rwlock_readguard_drop_handler.rs
runtime_library/: Cargo.toml
runtime_library/src/: exposed.rs  lib.rs  locktree.rs  memalloc.rs  recorder.rs  reporter.rs  utils.rs
runtime_library/src/recorder/: memaccess_record.rs  memalloc_record.rs  sync_record.rs
solcon_testcase/src/: box.rs  main.rs  mutex.rs  target.rs  this_is_our_monitor_function.rs
solcon_testcase_workspace/: Cargo.toml
solcon_testcase_workspace/.cargo/: config
solcon_testcase_workspace/test_target/: Cargo.toml
solcon_testcase_workspace/test_target/src/: lib.rs
solcon_testcase_workspace/testcase_env_logger/src/: lib.rs
solcon_testcase_workspace/testcase_mutex_dyn_type/: Cargo.toml
solcon_testcase_workspace/testcaseanother/: Cargo.toml
solcon_testcase_workspace/testcaseanother/src/: lib.rs
solcon_testcase_workspace/testcasemain/: Cargo.toml
solcon_testcase_workspace/testcasemain/src/: main.rs
solcon_testcase_workspace/this_is_our_monitor_function/: Cargo.toml
solcon_testcase_workspace/this_is_our_monitor_function/src/: lib.rs
solcon_testcase_workspace/this_is_our_test_target_mod/: Cargo.toml
solcon_testcase_workspace/this_is_our_test_target_mod/src/: lib.rs
src/: check_input.rs  function_call_instrumenter.rs  input_filter.rs  main.rs  mem_instrumenter.rs  mirpass.rs  monitors.rs  monitors_finder.rs  utils.rs
src/macro_monitors_finder/: Cargo.toml
src/macro_monitors_finder/src/: lib.rs
src/mirpass/: condvar_wait_timeout_handler.rs  condvar_wait_timeout_while_handler.rs  condvar_wait_while_handler.rs  debug_use_test_target_handler.rs  function_call_instrumenter.rs  mutex_handler.rs  mutex_lock_handler.rs  mutex_lockresult_unwrap.rs  mutexguard_drop.rs  obj_drop_instrumenter.rs  rwlock_read_handler.rs  rwlock_try_read_handler.rs  rwlock_try_write_handler.rs  rwlock_write_handler.rs  rwlock_writeguard_drop_handler.rs  search_monitor.rs  test_target_handler.rs
testcases/closure/: Cargo.toml
testcases/closure/src/: main.rs
testcases/memacess/: Cargo.toml
testcases/memacess/src/: main.rs
testcases/memacess_min/: Cargo.toml
testcases/memacess_min/src/: main.rs
testcases/testcase_env_logger/: Cargo.toml
testcases/testcase_single_crate/: Cargo.toml  a.rs
testcases/testcase_single_crate/src/: main.rs  test_mutex.rs
testcases/testcase_std_sync/: Cargo.toml
testcases/testcase_std_sync/src/: main.rs
testcases/testcase_target_drop/: Cargo.toml
testcases/testcase_target_drop/src/: main.rs
testcases/testcase_target_generic/src/: main.rs
testcases/testcase_target_generic2/src/: main.rs
testcases/testcase_workspace/: Cargo.toml
testcases/testcase_workspace/testcase_env_logger/src/: lib.rs
testcases/testcase_workspace/testcase_mutex_dyn_type/src/: lib.rs
testcases/testcase_workspace/testcaseanother/src/: lib.rs
testcases/testcase_workspace/testcasemain/: Cargo.toml
testcases/testcase_workspace/testcasemain/src/: main.rs
this_is_our_monitor_function/: Cargo.toml  build_monitor.sh
this_is_our_monitor_function/src/: lib.rs  utils.rs
