[package]
name = "solcon_instrumenter"
authors = ["hycinth22 <realhycinth@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
log = "0.4.11"
env_logger = "0.8.2"

# Copied from `compiler/rustc/Cargo.toml`.
# But only for some targets, it fails for others. Rustc configures this in its CI, but we can't
# easily use that since we support of-tree builds.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies.jemalloc-sys]
version = "0.5.0"
features = ['unprefixed_malloc_on_supported_platforms']

# [target.'cfg(unix)'.dependencies]
# libc = "0.2"

# [target.'cfg(target_os = "linux")'.dependencies]
# libffi = "3.2.0"
# libloading = "0.8"

[package.metadata.rust-analyzer]
rustc_private = true

