[package]
name = "solcon_instrumenter"
authors = ["hycinth22 <realhycinth@gmail.com>"]
version = "0.1.0"
edition = "2021"

[dependencies]
macro_monitors_finder = { path = "./src/macro_monitors_finder" }
tracing = "0.1"
tracing-tree = "0.3.0"

# Copied from `rust/src/librustdoc/Cargo.toml`.
[dependencies.tracing-subscriber]
version = "0.3.3"
default-features = false
features = ["fmt", "env-filter", "smallvec", "parking_lot", "ansi"]

# Copied from `rust/compiler/rustc/Cargo.toml`.
# But only for some targets, it fails for others. Rustc configures this in its CI, but we can't
# easily use that since we support of-tree builds.
[target.'cfg(any(target_os = "linux", target_os = "macos"))'.dependencies.jemalloc-sys]
version = "0.5.0"
features = ['unprefixed_malloc_on_supported_platforms']

# [target.'cfg(unix)'.dependencies]
# libc = "0.2"

# [target.'cfg(target_os = "linux")'.dependencies]
# libffi = "3.2.0"
# libloading = "0.8"

[package.metadata.rust-analyzer]
rustc_private = true

