[package]
name = "this_is_our_monitor_function"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
ctrlc = { version = "3.4", features = [] } # add feature `termination` to capture SIGTERM and SIGHUP also
chrono = "0.4"
env_logger = "0.11"
log = "0.4"
backtrace = "0.3"
hashbrown = "0.14.5"
tracking-allocator = "0.4.0"
allocator-api2 = "0.2.18"

[lib]
name = "this_is_our_monitor_function"
path = "src/lib.rs"  # or path to your main library file
crate-type = ["rlib"]  # specify that you want to build a Rust library
