[package]
name = "this_is_our_monitor_function"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.19"
chrono = "0.4"

[lib]
name = "this_is_our_monitor_function"
path = "src/lib.rs"  # or path to your main library file
crate-type = ["rlib"]  # specify that you want to build a Rust library
